--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <meta name="author" content="Hair-Harmony">
     <!-- Stylesheet -->
     <link rel="Stylesheet" href="assets/css/style.css">
-    
+
    <!-- Title -->
     <title>Hair & Harmony</title>
 </head>
 <body>
     <!-- Header -->
     <header>
+        <a href="index.html">
+            <h1 id="logo">Hair & Harmony</h1>
+        </a>
 
     </header>
     
