--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         <a href="index.html">
             <h1 id="logo">Hair & Harmony</h1>
         </a>
+        <nav class="nav-menu">
+            <ul id="menu">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="">About Me</a></li>
+                <li><a href="">Inspiration</a></li>
+                <li><a href="" aria-label="Go to contact information section">Contact & Reservation</a></li>
+            </ul>
+        </nav>
 
     </header>
     
