Create dropdown toggle in nav

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <a href="index.html">
             <h1 id="logo">Hair & Harmony</h1>
         </a>
+        <input type="checkbox" name="nav-toggle" id="nav-toggle">
         <nav class="nav-menu">
+        <label for="nav-toggle">X</label>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="">About Me</a></li>
