--- a/index.html
+++ b/index.html
@@ -43,5 +43,8 @@
     <footer>
         Footer
     </footer>
+
+    <!-- Font awesome kit -->
+    <script src="https://kit.fontawesome.com/8ad8be121a.js" crossorigin="anonymous"></script>
 </body>
 </html>
