--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </a>
         <input type="checkbox" name="nav-toggle" id="nav-toggle">
         <nav class="nav-menu">
-        <label for="nav-toggle">X</label>
+        <label for="nav-toggle"><i class="fa-solid fa-bars"></i></label>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="">About Me</a></li>
@@ -40,8 +40,25 @@
     </main>
     
     <!-- Footer -->
-    <footer>
-        Footer
+    <footer class="box5">
+        <ul id="social">
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="visit our facebook page(opens in a new browser)"><i
+                class="fa-brands fa-square-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="visit our instagram page(opens in a new browser)"><i
+                class="fa-brands fa-square-instagram"></i></a></li>
+            <li><a href="https://www.youtube.com" target="_blank" rel="noopener" aria-label="visit youtube for inspiration on hairstyles(opens in new browser)"><i
+                class="fa-brands fa-youtube"></i></a></li>
+        </ul>
+
+        <div class="form">
+            <h3 class="hidden-heading">Offers</h3>
+            <form action="_send" method="post">
+                <label for="email" class="email"></label>
+                <input type="email" name="email" id="email" placeholder="Don`t miss great deals" required>
+                <button type="submit" class="button">Subscribe</button>
+            </form>
+        </div>
+        
     </footer>
 
     <!-- Font awesome kit -->
