--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <a href="index.html">
             <h1 id="logo">Hair & Harmony</h1>
         </a>
-        <input type="checkbox" name="nav-toggle" id="nav-toggle">
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="dropdown-menu"><i class="fa-solid fa-bars"></i></label>
         <nav class="nav-menu">
-        <label for="nav-toggle"><i class="fa-solid fa-bars"></i></label>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="">About Me</a></li>
