Create a class for hidden-heading

--- a/gallery.html
+++ b/gallery.html
@@ -26,7 +26,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="gallery" class="active">Inspiration</a></li>
-                <li><a href="#contact" aria-label="Go to contact information section">Contact & Reservation</a></li>
+                <li><a href="index.html#contact" aria-label="Go to contact information section">Contact & Reservation</a></li>
             </ul>
         </nav>
 
