Added two sections in main and styled it

--- a/index.html
+++ b/index.html
@@ -37,6 +37,30 @@
       <section id="salon">
         <h2 class="hidden-heading">Picture</h2>
       </section>
+      <section id="offer">
+        <h4>A selection of what we offer:</h4>
+      </section>
+      <section id="box">
+        <h2 class="hidden-heading">Boxes</h2>
+        <div class="box1">
+        <i class="fa-solid fa-scissors"></i>
+        <ul class="list">
+            <li>Haircut</li>
+            <li>Hair coloring</li>
+            <li>Permanent</li>
+            <li>Bridal hairstyles</li>
+        </ul>  
+        </div>
+        <div class="box2">
+        <i class="fa-solid fa-spa"></i>
+        <ul class="list">
+            <li>Full body massage</li>
+            <li>Shiatsu massage</li>
+            <li>Prenetal massage</li>
+            <li>Hot stone massage</li>
+        </ul>  
+        </div>
+      </section>
        
     </main>
     
