--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         </ul>  
         </div>
       </section>
+      <section class="box4">
+        <h5>Take a moment just for yourself</h5>
+    </section>
        
     </main>
     
