Added nav links to about.html, gallery.html and contac section

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <nav class="nav-menu">
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="">About Me</a></li>
-                <li><a href="">Inspiration</a></li>
-                <li><a href="" aria-label="Go to contact information section">Contact & Reservation</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="gallery.html">Inspiration</a></li>
+                <li><a href="index.html#contact" aria-label="Go to contact information section">Contact & Reservation</a></li>
             </ul>
         </nav>
 
