Fixed a warning after validation with a hidden-heading in about.html

--- a/about.html
+++ b/about.html
@@ -37,7 +37,9 @@
       <section>
         <h2>This page is under construction. We are back in a flash!</h2>
       </section>
-      <section id="construction"></section>
+      <section id="construction">
+      <h6 class="hidden-heading">construction</h6>  
+      </section>
     </main>
     
     <!-- Footer -->
